# SotCStaticRecompilation

./: .gitignore
GAMECORE/: Splits.txt
KERNEL/: Splits.txt
MANAGER/: Splits.txt
MainElf/: CMakeLists.txt  Sections.txt  Splits.txt
MainElf/Decompilation/src/: Context.h  FunctionList.h  main.c  memset_ps2.c  sceSifGetReg.c
MainElf/Decompilation/src/Custom/: ConvertCDToLocalPath.c
MainElf/Decompilation/src/decompiled/: SleepThread.c
MainElf/Decompilation/src/reimplemented/: PutString.c  PutStringS.c  VSync.c
MainElf/Decompilation/src/reimplemented/Loader System/: LoaderSysFClose.c  LoaderSysFOpen.c  LoaderSysFRead.c  LoaderSysFSeek.c  LoaderSysFSeek64.c  LoaderSysFWrite.c  LoaderSysGetstat.c  LoaderSysPrintf.c  LoaderSysPutString.c  SceStatus.h  execProgWithThread.c
MainElf/Decompilation/src/reimplemented/Threads/: CreateThread.c  ProgramData.h  Threading.h
include/: Context.h  FunctionList.h
